--- a/src/singUp.html
+++ b/src/singUp.html
@@ -36,42 +36,42 @@
 
   <body>
   
-    <div class="login">
-      <div class="login-main">
-          <div class="login-left">
-              LOGO
-          </div>
-          <div class="login-right">
-              <div class="login-right_top">
-                  Welcome back!
-              </div>
-              <p>
-                  Please login to continue
-              </p>
-              <div class="input">
-                  <div class="input-email">
-                      Email address
-                  </div>
-                  <input class="input-name">
-                  <div class="input-w">
-                      <div class="input-password">
-                          Email address
-                      </div>
-                      <div class="input-forgot">
-                          Forgot password?
-                      </div>
-                  </div>
-                  <input class="input-name">
-              </div>
-              <button class="button-input">
-              Button Text 
-               </button>
-               <div class="login-news">
-                   <a class="login-new" href="./singUp.html">New to Scratch?</a>
-               </div>
-          </div>
-      </div>
-  </div>
+    <div class="singUp">
+        <div class="singUp-main">
+            <div class="singUp-left">
+                LOGO
+            </div>
+            <div class="singUp-right">
+                <div class="singUp-right_top">
+                    Start from scratch
+                </div>
+                <p>
+                    Create account to continue.
+                </p>
+                <div class="input">
+                    <div class="input-email">
+                        Email address
+                    </div>
+                    <input class="input-name">
+                    <div class="input-email">
+                        Email address
+                    </div>
+                    <input class="input-name">
+                    <div class="input-email">
+                        Email address
+                    </div>
+                    <input class="input-name">
+                </div>
+                <button class="button-singUp">Button Text</button>
+                <div class="singUp-news">
+                    <a href="./login.html" class="singUp-new">
+                        Already have an account?
+                    </a> </div>
+            </div>
+        </div>
+    </div>
+    
+    <!-- include scripts.html -->
     <!-- build:js(.) scripts/vendor.min.js -->
 <script type="text/javascript" src="node_modules/jquery/dist/jquery.js"></script>
 <script type="text/javascript" src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
