--- a/src/index.html
+++ b/src/index.html
@@ -62,19 +62,19 @@
        <!-- include main.html -->
        <main class="main">
         <div class="container-fluid">
-            <p class="main-text">
+            <p class="text-title">
                 Join over 50 milions people sharingrecipes everyday
             </p>
-            <p class="main-bottom">
+            <p class="text-description">
                 Never run out ideas again. Try new foods, ingredient, cooking style,and more
             </p>
             <div class="button"  >
-                <div class="main-button" href="../../login.html">
+                <div class="main-button-login" href="../../login.html">
                     <a href="../../login.html" >
                         Button Text
                     </a>
                 </div>
-                <div class="main-button1">
+                <div class="main-button">
                     <a href="../../login.html" >
                         Button Text
                     </a>
