--- a/src/signUp.html
+++ b/src/signUp.html
@@ -35,42 +35,29 @@
   </head>
 
   <body>
-  
-    <div class="singUp">
-        <div class="singUp-main">
-            <div class="singUp-left">
-                LOGO
-            </div>
-            <div class="singUp-right">
-                <div class="singUp-right_top">
-                    Start from scratch
-                </div>
-                <p>
-                    Create account to continue.
-                </p>
-                <div class="input">
-                    <div class="input-email">
-                        Email address
-                    </div>
-                    <input class="input-name">
-                    <div class="input-email">
-                        Email address
-                    </div>
-                    <input class="input-name">
-                    <div class="input-email">
-                        Email address
-                    </div>
-                    <input class="input-name">
-                </div>
-                <button class="button-singUp">Button Text</button>
-                <div class="singUp-news">
-                    <a href="./login.html" class="singUp-new">
-                        Already have an account?
-                    </a> </div>
-            </div>
+    <div class="signUp">
+      <div class="signUp-main">
+        <div class="signUp-left">LOGO</div>
+        <div class="signUp-right">
+          <div class="signUp-right-title">Start from scratch</div>
+          <p>Create account to continue.</p>
+          <div class="input-signUp">
+            <div class="input-email">Email address</div>
+                <input class="input-name" />
+            <div class="input-email">Email address</div>
+                <input class="input-name" />
+            <div class="input-email">Email address</div>
+                <input class="input-name" />
+          </div>
+          <button class="button-signUp">Button Text</button>
+          <div class="signUp-news">
+            <a href="./login.html" class="signUp-new"> Already have an account? </a>
+          </div>
+          <button class="button-singUp-text">Button Text</button>
         </div>
+      </div>
     </div>
-    
+
     <!-- include scripts.html -->
     <!-- build:js(.) scripts/vendor.min.js -->
 <script type="text/javascript" src="node_modules/jquery/dist/jquery.js"></script>
