--- a/src/login.html
+++ b/src/login.html
@@ -1,88 +1,84 @@
 <!DOCTYPE html>
 <html lang="vi">
+  <head>
+    <!-- include head.html -->
+    <title>Demo</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
+<meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
+<!-- favicon -->
+<link href="images/favicon.icon" type="image/x-icon" rel="icon">
+<!-- meta social -->
+<meta name="twitter:card" content="" />
+<meta name="twitter:site" content="" />
+<meta name="twitter:creator" content="" />
+<meta property="og:description" content="" />
+<meta property="og:image" content="" />
+<meta property="og:site_name" content="">
+<meta property="og:title" content="" />
+<meta property="og:type" content="">
+<meta property="og:url" content="" />
+<!-- Google Font -->
 
-<head>
-  <!-- include head.html -->
-  <title>Demo</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
-  <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
-  <!-- favicon -->
-  <link href="images/favicon.icon" type="image/x-icon" rel="icon">
-  <!-- meta social -->
-  <meta name="twitter:card" content="" />
-  <meta name="twitter:site" content="" />
-  <meta name="twitter:creator" content="" />
-  <meta property="og:description" content="" />
-  <meta property="og:image" content="" />
-  <meta property="og:site_name" content="">
-  <meta property="og:title" content="" />
-  <meta property="og:type" content="">
-  <meta property="og:url" content="" />
-  <!-- Google Font -->
+    <!-- include styles.html -->
+    <!-- build:css(.) styles/vendor.min.css -->
+<link rel="stylesheet" type="text/css" media="screen" href="node_modules/bootstrap/dist/css/bootstrap.css" />
+<link rel="stylesheet" type="text/css" media="screen" href="node_modules/slick-carousel/slick/slick.css" />
+<link rel="stylesheet" type="text/css" media="screen" href="node_modules/slick-carousel/slick/slick-theme.css" />
+<link rel="stylesheet" type="text/css" media="screen" href="node_modules/lightgallery/dist/css/lightgallery.min.css" />
+<link rel="stylesheet" type="text/css" media="screen" href="node_modules/mmenu-js/dist/mmenu.css" />
+<!-- endbuild -->
+<!-- build:css(.tmp) styles/style.min.css -->
+<link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
+<!-- endbuild -->
 
-  <!-- include styles.html -->
-  <!-- build:css(.) styles/vendor.min.css -->
-  <link rel="stylesheet" type="text/css" media="screen" href="node_modules/bootstrap/dist/css/bootstrap.css" />
-  <link rel="stylesheet" type="text/css" media="screen" href="node_modules/slick-carousel/slick/slick.css" />
-  <link rel="stylesheet" type="text/css" media="screen" href="node_modules/slick-carousel/slick/slick-theme.css" />
-  <link rel="stylesheet" type="text/css" media="screen"
-    href="node_modules/lightgallery/dist/css/lightgallery.min.css" />
-  <link rel="stylesheet" type="text/css" media="screen" href="node_modules/mmenu-js/dist/mmenu.css" />
-  <!-- endbuild -->
-  <!-- build:css(.tmp) styles/style.min.css -->
-  <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
-  <!-- endbuild -->
+  </head>
 
-</head>
-
-<body>
-  <div class="login">
-    <div class="login-main">
-      <div class="login-left">LOGO</div>
-      <div class="login-right">
-        <div class="login-right-title">Welcome back!</div>
-        <p>Please login to continue</p>
-        <div class="input">
-          <div class="input-email">Email address</div>
-              <input class="input-name"/>
-          <div class="input-w">
-            <div class="input-password">Email address</div>
-            <div class="input-forgot">Forgot password?</div>
+  <body>
+    <div class="login">
+      <div class="login-main">
+        <div class="login-left">LOGO</div>
+        <div class="login-right">
+          <div class="login-right-title">Welcome back!</div>
+          <p>Please login to continue</p>
+          <div class="input">
+            <div class="input-email">Email address</div>
+                <input class="input-name" />
+            <div class="input-w">
+              <div class="input-password">Email address</div>
+              <div class="input-forgot">Forgot password?</div>
+            </div>
+                <input class="input-name" />
           </div>
-              <input class="input-name"/>
+          <button class="button-input">Button Text</button>
+          <div class="login-news">
+            <a class="login-new" href="./signUp.html">New to Scratch?</a>
+          </div>
         </div>
-        <button class="button-input">Button Text</button>
-        <div class="login-news">
-          <a class="login-new" href="./signUp.html">New to Scratch?</a>
-        </div>
-        <button class="button-singUp-text">Button Text</button>
       </div>
     </div>
-  </div>
-  <!-- build:js(.) scripts/vendor.min.js -->
-  <script type="text/javascript" src="node_modules/jquery/dist/jquery.js"></script>
-  <script type="text/javascript" src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
-  <script type="text/javascript" src="node_modules/scrollbooster/dist/scrollbooster.min.js"></script>
-  <script type="text/javascript" src="node_modules/slick-carousel/slick/slick.js"></script>
-  <script type="text/javascript" src="node_modules/lightgallery/dist/js/lightgallery.min.js"></script>
-  <script type="text/javascript" src="node_modules/lg-thumbnail/dist/lg-thumbnail.min.js"></script>
-  <script type="text/javascript" src="node_modules/lg-video/dist/lg-video.min.js"></script>
-  <script type="text/javascript" src="node_modules/mmenu-js/dist/mmenu.js"></script>
-  <script type="text/javascript" src="node_modules/wow.js/dist/wow.js"></script>
-  <script type="text/javascript" src="node_modules/list.js/dist/list.min.js"></script>
-  <script type="text/javascript" src="node_modules/list.pagination.js/dist/list.pagination.min.js"></script>
-  <script type="text/javascript" src="node_modules/pagepiling.js/dist/jquery.pagepiling.js"></script>
-  <script type="text/javascript" src="node_modules/pagepiling.js/dist/jquery.pagepiling.min.js"></script>
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/jquery-ui.min.js"></script>
-  <script type="text/javascript" src="node_modules/materialize-css/js/waves.js"></script>
-  <!-- endbuild -->
-  <!-- build:js scripts/script.min.js -->
-  <script type="text/javascript" src="scripts/script.js"></script>
-  <script type="text/javascript" src="scripts/sliders.js"></script>
-  <script type="text/javascript" src="scripts/main.js"></script>
-  <!-- endbuild -->
+    <!-- build:js(.) scripts/vendor.min.js -->
+<script type="text/javascript" src="node_modules/jquery/dist/jquery.js"></script>
+<script type="text/javascript" src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
+<script type="text/javascript" src="node_modules/scrollbooster/dist/scrollbooster.min.js"></script>
+<script type="text/javascript" src="node_modules/slick-carousel/slick/slick.js"></script>
+<script type="text/javascript" src="node_modules/lightgallery/dist/js/lightgallery.min.js"></script>
+<script type="text/javascript" src="node_modules/lg-thumbnail/dist/lg-thumbnail.min.js"></script>
+<script type="text/javascript" src="node_modules/lg-video/dist/lg-video.min.js"></script>
+<script type="text/javascript" src="node_modules/mmenu-js/dist/mmenu.js"></script>
+<script type="text/javascript" src="node_modules/wow.js/dist/wow.js"></script>
+<script type="text/javascript" src="node_modules/list.js/dist/list.min.js"></script>
+<script type="text/javascript" src="node_modules/list.pagination.js/dist/list.pagination.min.js"></script>
+<script type="text/javascript" src="node_modules/pagepiling.js/dist/jquery.pagepiling.js"></script>
+<script type="text/javascript" src="node_modules/pagepiling.js/dist/jquery.pagepiling.min.js"></script>
+<script  type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/jquery-ui.min.js"></script>
+<script type="text/javascript" src="node_modules/materialize-css/js/waves.js"></script>
+<!-- endbuild -->
+<!-- build:js scripts/script.min.js -->
+<script type="text/javascript" src="scripts/script.js"></script>
+<script type="text/javascript" src="scripts/sliders.js"></script>
+<script type="text/javascript" src="scripts/main.js"></script>
+<!-- endbuild -->
 
-</body>
-
+  </body>
 </html>
