--- a/src/index.html
+++ b/src/index.html
@@ -37,28 +37,21 @@
   <body>
     <div class="wrapper">
       <!-- include header.html -->
-      <nav class="navbar navbar-expand-md bg-custom">
-  <div class="mr-auto order-0">
-    <a class="mx-auto" href="/">
-     Logo
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse">
-      <div id="nav-icon">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-    </button>
+      <nav class="navbar ">
+  <div class="logo">
+    <a>LOGO</a>
+    <div>4 pieces 1/2-inch thick pieces brioche</div>
   </div>
-  <!-- <div class="navbar-collapse collapse w-100 order-1 order-md-0">
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item">
-        <a class="nav-link" title="Home" href="/index.html">Home</a>
-      </li>
-    </ul>
-  </div> -->
+  <div class="search">
+    <img class="search__icon" src="https://img.icons8.com/ios/50/000000/search--v1.png" />
+    <input class="search__input" placeholder="Search Recipe Profile, or Ingredients" />
+  </div>
+  <div class="narbar__right">
+    <img class="narbar__right--notification" src="https://img.icons8.com/ios/50/000000/appointment-reminders--v1.png" />
+    <img class="narbar__right--mailbox" src="https://img.icons8.com/ios/50/000000/mail.png" />
+    <img class="narbar__right--avt" src="https://img.icons8.com/ios/50/000000/user-male-circle.png" />
+  </div>
 </nav>
-
        <!-- include main.html -->
        <main class="main">
         <div class="container-fluid">
@@ -74,9 +67,9 @@
                         Button Text
                     </a>
                 </div>
-                <div class="main-button">
-                    <a href="../../login.html" >
-                        Button Text
+                <div class="main-button" href="../../feed.html">
+                    <a href="../../feed.html" >
+                        Button Feed
                     </a>
                 </div>
             </div>
@@ -108,5 +101,6 @@
 <script type="text/javascript" src="scripts/sliders.js"></script>
 <script type="text/javascript" src="scripts/main.js"></script>
 <!-- endbuild -->
+
   </body>
 </html>
