--- a/src/feed.html
+++ b/src/feed.html
@@ -37,9 +37,9 @@
 
 <body>
   <!-- include header.html -->
-  <nav class="navbar ">
+  <nav class="navbar">
   <div class="logo">
-    <a>LOGO</a>
+    <a href="#">LOGO</a>
     <div>4 pieces 1/2-inch thick pieces brioche</div>
   </div>
   <div class="search">
@@ -59,11 +59,11 @@
       <div class="feed__left">
         <div class="feed__profile">
           <div class="profile-top">
-            <img class="feed__profile--avt" src="https://img.icons8.com/ios/100/000000/user-male-circle.png" />
+            <img class="feed__profile--avt" src="../../img/user-male-circle.png" />
             <div class="profile-right">
-                <div class="feed__profile--name">
+                <h2 class="feed__profile--name">
                   Nick Evans
-                </div>
+                </h2>
                 <div class="feed__profile--title">
                   Potato Master
                 </div>
@@ -76,22 +76,22 @@
             </div>
           </div>
           <div class="profile-bottom">
-            <div class="profile__bottom--Recipes">
+            <div class="profile__bottom--recipes">
               <div>20</div>
               <div>Recipes</div>
             </div>
-            <div class="profile__bottom--Saved">
+            <div class="profile__bottom--raved">
               <div> 75</div>
               <div>Saved</div>
             </div>
-            <div class="profile__bottom--Following">
+            <div class="profile__bottom--following">
               <div>248</div>
               <div>Following</div>
             </div>
           </div>
         </div>
         <div class="feed__menu">
-          <div>Top 5 Recipe today</div>
+          <h2>Top 5 Recipe today</h2>
           <ul>
             <li>Tea-Smoked Creamy Chicken</li>
             <li>Pickled Savory Tortilla</li>
@@ -109,9 +109,9 @@
         </div>
         <div class="feed-posts">
           <div class="feed__card">
-            <div class="card-top">
+            <div class="feed__card--top">
               <div class="card__top-avt">
-                <img src="https://img.icons8.com/ios/50/000000/user-male-circle.png" />
+                <img src="../../img/user-male-circle-50.png" />
               </div>
               <div class="card__top-name">
                 <h1>Profile Name</h1>
@@ -125,7 +125,7 @@
             <div class="card-bottom">
               <div class="card__bottom--title">Red Wine and Mint Soufflé</div>
               <img class="card__bottom--icon"
-                src="https://img.icons8.com/material-outlined/24/000000/filled-like.png" />
+                src="../../img/filled-like-24.png" />
               <div class="card__bottom--description">Apparently we had reached a great height in the atmosphere, for the
                 sky was</div>
               <div class="card__bottom--Interactive">
@@ -138,9 +138,9 @@
           <!--  -->
           <div class="feed-card-main">
             <div class="feed__card card-main">
-              <div class="card-top">
+              <div class="feed__card--top">
                 <div class="card__top-avt">
-                  <img src="https://img.icons8.com/ios/50/000000/user-male-circle.png" />
+                  <img src="../../img/user-male-circle-50.png" />
                 </div>
                 <div class="card__top-name">
                   <h1>Profile Name</h1>
@@ -150,12 +150,12 @@
                 </div>
               </div>
               <div>
-                <img class="card-img" src="../../img/feed-card.jpg" alt="">
+                <img class="card-img" src="../../img/feed-card.jpg" alt="strawberry photo">
               </div>
               <div class="card-bottom">
                 <div class="card__bottom--title">Red Wine and Mint Soufflé</div>
                 <img class="card__bottom--icon"
-                  src="https://img.icons8.com/material-outlined/24/000000/filled-like.png" />
+                  src="../../img/filled-like-24.png" />
                 <div class="card__bottom--description">Apparently we had reached a great height in the atmosphere, for
                   the
                   sky was</div>
@@ -168,7 +168,7 @@
             </div>
             <div class="feed-modal">
               <div class="feed__modal--title">Modal Title</div>
-              <img class="feed__modal--icon" src="https://img.icons8.com/ios/50/000000/delete-sign--v1.png" />
+              <img class="feed__modal--icon" src="../../img/delete-sign--v1-50.png" />
               <ul>
                 <li>Western</li>
                 <li>Quick Lunch</li>
@@ -185,8 +185,8 @@
             </div>
             <div class="feed-card-follow">
               <div class="card-follow card-follow-one">
-                <img class="card__follow--background" src="../../img/feed-follow-01.jpeg" alt="">
-                <img class="card__follow--avt" src="https://img.icons8.com/ios/100/000000/user-male-circle.png" />
+                <img class="card__follow--background" src="../../img/feed-follow-01.jpeg" alt="strawberry photo">
+                <img class="card__follow--avt" src="../../img/user-male-circle.png" />
                 <div class="card__follow--name">followers can see</div>
                 <div class="card-follow-bottom">
                   <div class="card__follow--save">Save to</div>
@@ -195,8 +195,8 @@
                 <button class="card__follow--btn">Create account</button>
               </div>
               <div class="card-follow card-follow-two">
-                <img class="card__follow--background" src="../../img/feed-follow-02.jpeg" alt="">
-                <img class="card__follow--avt" src="https://img.icons8.com/ios/100/000000/user-male-circle.png" />
+                <img class="card__follow--background" src="../../img/feed-follow-02.jpeg" alt="salad photo">
+                <img class="card__follow--avt" src="../../img/user-male-circle.png" />
                 <div class="card__follow--name">followers can see</div>
                 <div class="card-follow-bottom">
                   <div class="card__follow--save">Save to</div>
@@ -205,8 +205,8 @@
                 <button class="card__follow--btn">Create account</button>
               </div>
               <div class="card-follow card-follow-three">
-                <img class="card__follow--background" src="../../img/feed-follow-03.jpeg" alt="">
-                <img class="card__follow--avt" src="https://img.icons8.com/ios/100/000000/user-male-circle.png" />
+                <img class="card__follow--background" src="../../img/feed-follow-03.jpeg" alt="hamburger photo">
+                <img class="card__follow--avt" src="../../img/user-male-circle.png" />
                 <div class="card__follow--name">followers can see</div>
                 <div class="card-follow-bottom">
                   <div class="card__follow--save">Save to</div>
@@ -227,11 +227,11 @@
         <div class="feed__right--contact">
           <h2>Most Active Today</h2>
           <div>
-            <img src="https://img.icons8.com/ios/50/000000/user-male-circle.png" />
-            <img src="https://img.icons8.com/ios/50/000000/user-male-circle.png" />
-            <img src="https://img.icons8.com/ios/50/000000/user-male-circle.png" />
-            <img src="https://img.icons8.com/ios/50/000000/user-male-circle.png" />
-            <img src="https://img.icons8.com/ios/50/000000/user-male-circle.png" />
+            <img src="../../img/user-male-circle-50.png" />
+            <img src="../../img/user-male-circle-50.png" />
+            <img src="../../img/user-male-circle-50.png" />
+            <img src="../../img/user-male-circle-50.png" />
+            <img src="../../img/user-male-circle-50.png" />
           </div>
         </div>
         <div class="feed__right--footer">
