--- a/src/index.html
+++ b/src/index.html
@@ -37,9 +37,9 @@
   <body>
     <div class="wrapper">
       <!-- include header.html -->
-      <nav class="navbar ">
+      <nav class="navbar">
   <div class="logo">
-    <a>LOGO</a>
+    <a href="#">LOGO</a>
     <div>4 pieces 1/2-inch thick pieces brioche</div>
   </div>
   <div class="search">
