--- a/src/feed.html
+++ b/src/feed.html
@@ -43,13 +43,13 @@
     <div>4 pieces 1/2-inch thick pieces brioche</div>
   </div>
   <div class="search">
-    <img class="search__icon" src="https://img.icons8.com/ios/50/000000/search--v1.png" />
+    <img class="search__icon" src="../../img/search--v1-50.png" />
     <input class="search__input" placeholder="Search Recipe Profile, or Ingredients" />
   </div>
   <div class="narbar__right">
-    <img class="narbar__right--notification" src="https://img.icons8.com/ios/50/000000/appointment-reminders--v1.png" />
-    <img class="narbar__right--mailbox" src="https://img.icons8.com/ios/50/000000/mail.png" />
-    <img class="narbar__right--avt" src="https://img.icons8.com/ios/50/000000/user-male-circle.png" />
+    <img class="narbar__right--notification" src="../../img/appointment-reminders--v1-50.png" />
+    <img class="narbar__right--mailbox" src="../../img/mail-50.png" />
+    <img class="narbar__right--avt" src="../../img/avt-01.jpeg" />
   </div>
 </nav>
   <!-- include main.html -->
@@ -59,7 +59,7 @@
       <div class="feed__left">
         <div class="feed__profile">
           <div class="profile-top">
-            <img class="feed__profile--avt" src="../../img/user-male-circle.png" />
+            <img class="feed__profile--avt" src="../../img/avt-01.jpeg" />
             <div class="profile-right">
                 <h2 class="feed__profile--name">
                   Nick Evans
@@ -80,7 +80,7 @@
               <div>20</div>
               <div>Recipes</div>
             </div>
-            <div class="profile__bottom--raved">
+            <div class="profile__bottom--saved">
               <div> 75</div>
               <div>Saved</div>
             </div>
@@ -104,14 +104,14 @@
       <!-- Main-->
       <div class="feed__main">
         <div class="feed-header">
-          <input class="feed__header--input" />
+          <input class="feed__header--input" placeholder="user@email.com" />
           <button class="feed__header--btn">Button Text</button>
         </div>
         <div class="feed-posts">
           <div class="feed__card">
             <div class="feed__card--top">
               <div class="card__top-avt">
-                <img src="../../img/user-male-circle-50.png" />
+                <img class="card__top-avt" src="../../img/avt-01.jpeg" />
               </div>
               <div class="card__top-name">
                 <h1>Profile Name</h1>
@@ -139,8 +139,8 @@
           <div class="feed-card-main">
             <div class="feed__card card-main">
               <div class="feed__card--top">
-                <div class="card__top-avt">
-                  <img src="../../img/user-male-circle-50.png" />
+                <div >
+                  <img class="card__top-avt" src="../../img/avt-01.jpeg" />
                 </div>
                 <div class="card__top-name">
                   <h1>Profile Name</h1>
@@ -186,7 +186,7 @@
             <div class="feed-card-follow">
               <div class="card-follow card-follow-one">
                 <img class="card__follow--background" src="../../img/feed-follow-01.jpeg" alt="strawberry photo">
-                <img class="card__follow--avt" src="../../img/user-male-circle.png" />
+                <img class="card__follow--avt" src="../../img/avt-02.jpeg" />
                 <div class="card__follow--name">followers can see</div>
                 <div class="card-follow-bottom">
                   <div class="card__follow--save">Save to</div>
@@ -196,7 +196,7 @@
               </div>
               <div class="card-follow card-follow-two">
                 <img class="card__follow--background" src="../../img/feed-follow-02.jpeg" alt="salad photo">
-                <img class="card__follow--avt" src="../../img/user-male-circle.png" />
+                <img class="card__follow--avt" src="../../img/avt-03.jpeg" />
                 <div class="card__follow--name">followers can see</div>
                 <div class="card-follow-bottom">
                   <div class="card__follow--save">Save to</div>
@@ -206,7 +206,7 @@
               </div>
               <div class="card-follow card-follow-three">
                 <img class="card__follow--background" src="../../img/feed-follow-03.jpeg" alt="hamburger photo">
-                <img class="card__follow--avt" src="../../img/user-male-circle.png" />
+                <img class="card__follow--avt" src="../../img/avt-01.jpeg" />
                 <div class="card__follow--name">followers can see</div>
                 <div class="card-follow-bottom">
                   <div class="card__follow--save">Save to</div>
@@ -227,11 +227,11 @@
         <div class="feed__right--contact">
           <h2>Most Active Today</h2>
           <div>
-            <img src="../../img/user-male-circle-50.png" />
-            <img src="../../img/user-male-circle-50.png" />
-            <img src="../../img/user-male-circle-50.png" />
-            <img src="../../img/user-male-circle-50.png" />
-            <img src="../../img/user-male-circle-50.png" />
+            <img src="../../img/avt-01.jpeg" />
+            <img src="../../img/avt-02.jpeg" />
+            <img src="../../img/avt-03.jpeg" />
+            <img src="../../img/avt-01.jpeg" />
+            <img src="../../img/avt-02.jpeg" />
           </div>
         </div>
         <div class="feed__right--footer">
