--- a/src/index.html
+++ b/src/index.html
@@ -37,21 +37,10 @@
   <body>
     <div class="wrapper">
       <!-- include header.html -->
-      <nav class="navbar">
-  <div class="logo">
-    <a href="#">LOGO</a>
-    <div>4 pieces 1/2-inch thick pieces brioche</div>
-  </div>
-  <div class="search">
-    <img class="search__icon" src="../../img/search--v1-50.png" />
-    <input class="search__input" placeholder="Search Recipe Profile, or Ingredients" />
-  </div>
-  <div class="narbar__right">
-    <img class="narbar__right--notification" src="../../img/appointment-reminders--v1-50.png" />
-    <img class="narbar__right--mailbox" src="../../img/mail-50.png" />
-    <img class="narbar__right--avt" src="../../img/avt-01.jpeg" />
-  </div>
-</nav>
+      
+      <div class="header-logo">
+        <a class="index__logo" href="#">LOGO</a>
+      </div>
        <!-- include main.html -->
        <main class="main">
         <div class="container-fluid">
